Use latest nanopub library